5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4471/executions/1662_1397.log
== TEST (2019-04-15 15:25:58) 
-- CODE:
a<=(10000)=5.00
a>=(10000)=(5.00 + 4.00)
print(round(a))
-- ERROR:
File "XXXX", line 1
    a<=(10000)=5.00
    ^
SyntaxError: can't assign to comparison
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:26:35) 
-- CODE:
a<=(10000)=5.00
a>=(10000)=(5.00 + 4.00)
print(round(5.00+4.00, 2))
-- ERROR:
File "XXXX", line 1
    a<=(10000)=5.00
    ^
SyntaxError: can't assign to comparison
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:26:41) 
-- CODE:
a<=(10000)=5.00
a>=(10000)=(5.00 + 4.00)
print(round(5.00 + 4.00, 2))
-- ERROR:
File "XXXX", line 1
    a<=(10000)=5.00
    ^
SyntaxError: can't assign to comparison
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:15) 
-- CODE:
a<=(10000)=5.00
a>=(10000)=(5.00 + 4.00)
print(round(5.00 + 4.00,2))   
-- ERROR:
File "XXXX", line 1
    a<=(10000)=5.00
    ^
SyntaxError: can't assign to comparison
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
